<resources>
    <string name="app_name">RUF City Campus</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_event_detail">Event</string>
    <string name="title_activity_msg_detail">Message</string>
    <string name="title_activity_bc_detail">Broadcast</string>
    <string name="title_activity_talk_detail">Talk</string>
    <string name="title_activity_signups_detail">Signup</string>
    <string name="title_activity_add">Add Stuff</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_msg_list">Inbox</string>

    <string name="broadcast_type">broadcast</string>

    <string name="date_hint">13:21 6/14/2016</string>
    <string name="location_hint">location</string>
    <string name="title_hint">title</string>
    <string name="subject_hint">subject</string>
    <string name="author_hint">author</string>
    <string name="message_hint">message</string>
    <string name="description_hint">description</string>
    <string name="reference_hint">reference</string>
    <string name="topic_hint">topic</string>
    <string name="location_name_hint">location name</string>
    <string name="location_address_hint">address</string>
    <string name="outline_hint">outline\n(one point per line)</string>
    <string name="member_count_hint">count</string>

    <string name="add_user_to_signup_button">signup</string>

    <string name="email_hint">email</string>
    <string name="name_hint">name</string>
    <string name="pass_hint">password</string>
    <string name="register_button">Register</string>
    <string name="have_account">Have An Account?</string>
    <string name="need_account">Need An Account?</string>
    <string name="signin_button">Sign In</string>
    <string name="time_info_hint">every wednesday at 3:00</string>

    <string name="submit_button">Submit</string>
    <string name="send_button">Send</string>
    <string name="refresh">Refresh</string>
    <string name="add_event">Add Event</string>
    <string name="add_msg">Send Message</string>
    <string name="add_bc">Send Broadcast</string>
    <string name="add_talk">Add Talk</string>
    <string name="show_inbox">Inbox</string>
    <string name="add_signup">Add Signup</string>
    <string name="delete_msg">Delete</string>

    <string name="author_lead">by</string>
    <string name="to_lead">for</string>
    <string name="topic_lead">about</string>
    <string name="date_lead">since</string>
    <string name="count_lead">Be there in</string>
    <string name="count_edit_lead">Starts at</string>
    <string name="time_info_lead">when</string>
    <string name="location_lead">at</string>
    <string name="reference_lead">on</string>
    <string name="sync_cast">sync cast</string>
</resources>
