<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="15dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brentondurkee.ccm.auth.AuthActivity">


            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <EditText android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="48dp" android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="true" />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="48dp" android:hint="@string/pass_hint"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/signin_button"
                    android:textStyle="bold" />

                <Button android:id="@+id/email_register_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/need_account"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>


