<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="75dp"
    android:layout_gravity="center_horizontal|top"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <TextView
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:text="@string/name_hint"
        android:id="@+id/signupName"
        style="@style/HeaderText"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:text="@string/location_hint"
        android:id="@+id/signupLocation"
        style="@style/TitleText"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/signupName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:text="@string/member_count_hint"
        android:id="@+id/signupCount"
        style="@style/BodyText"
        android:layout_gravity="right|top"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp" />
</RelativeLayout>
