<!--
  ~ Copyright (c) 2015. This work has been created by Brenton Durkee. Designed for use by RUF CCM
  -->
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.brentondurkee.ccm.inbox.MsgDetail$MsgDetailFragment">


<!-- Sync Cast Switch -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_cast"
        android:id="@+id/textView6"
        android:textColor="@color/leadText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/PrimaryText" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/synyCastSwitch"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:height="40dp" />

    <!-- Title -->
    <EditText
        android:id="@+id/bcAddTitle"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        style="@style/EditTitle" />

    <!-- Syncs Type Selector -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/topic_lead"
        android:id="@+id/textView4"
        android:textColor="@color/leadText"
        android:layout_below="@+id/bcAddTitle"
        android:layout_alignParentStart="true"
        style="@style/PrimaryText" />

    <!--<Spinner-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/spinner_syncs"-->
        <!--android:layout_alignTop="@+id/textView4"-->
        <!--android:layout_toEndOf="@+id/textView4"-->
        <!--android:gravity="start" />-->

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/list_syncs"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <!-- Group "To" Selector -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_lead"
        android:id="@+id/textView5"
        android:textColor="@color/leadText"
        android:layout_below="@+id/list_syncs"
        android:layout_alignParentStart="true"
        style="@style/PrimaryText" />

    <!--<Spinner-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/spinner_groups"-->
        <!--android:layout_alignTop="@+id/textView5"-->
        <!--android:layout_toEndOf="@+id/textView5"-->
        <!--android:gravity="start" />-->

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/list_groups"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <!-- Message -->
    <EditText
        android:id="@+id/bcAddMsg"
        android:layout_below="@+id/list_groups"
        android:layout_alignParentStart="true"
        style="@style/EditMsg"
        android:lines="3" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/EditSubmit"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />


</RelativeLayout>
